src/test/ui/empty/empty-struct-tuple-pat.stderr
error[E0530]: match bindings cannot shadow tuple structs
  --> $DIR/empty-struct-tuple-pat.rs:22:9
   |
LL | struct Empty2();
   | ---------------- the tuple struct `Empty2` is defined here
...
LL |         Empty2 => ()
   |         ^^^^^^ cannot be named the same as a tuple struct

error[E0530]: match bindings cannot shadow tuple structs
  --> $DIR/empty-struct-tuple-pat.rs:25:9
   |
LL | use empty_struct::*;
   |     --------------- the tuple struct `XEmpty6` is imported here
...
LL |         XEmpty6 => ()
   |         ^^^^^^^ cannot be named the same as a tuple struct

error[E0532]: expected unit struct, unit variant or constant, found tuple variant `E::Empty4`
  --> $DIR/empty-struct-tuple-pat.rs:29:9
   |
LL |     Empty4()
   |     -------- `E::Empty4` defined here
...
LL |         E::Empty4 => ()
   |         ^^^^^^^^^ did you mean `E::Empty4( /* fields */ )`?

error[E0532]: expected unit struct, unit variant or constant, found tuple variant `XE::XEmpty5`
  --> $DIR/empty-struct-tuple-pat.rs:33:9
   |
LL |         XE::XEmpty5 => (),
   |         ^^^^-------
   |         |   |
   |         |   help: a unit variant with a similar name exists: `XEmpty4`
   |         did you mean `XE::XEmpty5( /* fields */ )`?
   | 
  ::: $DIR/auxiliary/empty-struct.rs:7:5
   |
LL |     XEmpty4,
   |     ------- similarly named unit variant `XEmpty4` defined here
LL |     XEmpty5(),
   |     --------- `XE::XEmpty5` defined here

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0530, E0532.
For more information about an error, try `rustc --explain E0530`.
